--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -22,18 +23,18 @@
 
         <!-- Add your site or application content here -->
         <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
+            <header>Hi. I'm Katie.</header>
+            <main></main>
             <div id="div-1" class="flex-items">
-                Div 1
+                I live in Bellingham, Washington and am transitioning to a tech-oriented career.
             </div>
             <div id="div-2" class="flex-items">
-                Div 2
-            </div>
+              After working many seasonal jobs at various national parks in the western USA, I decided to permanently settle in northwestern Washington state.
+          </div>
             <div id="div-3" class="flex-items">
-                Div 3
+                I enjoy road biking, hiking with my dog, and playing the piano.
             </div>
-            <footer>Footer</footer>
+            <footer></footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
